@@ -1,3 +1,11 @@
+2001-04-02  Ramiro Estrugo  <ramiro@eazel.com>
+
+	* .cvsignore:
+	* Makefile.am:
+	* configure.in:
+	* librsvg.spec.in:
+	First try at a spec file.
+	
 2001-03-28  Ramiro Estrugo  <ramiro@eazel.com>
 
 	Started ChangeLog
